<resources>
    <string name="app_name">DSS for Students</string>
    <string name="app_label">СППР</string>

    <string name="next">Далее</string>

    <!-- AKDSSLearningModeActivity strings -->

    <!-- AKDSSLearningModeStepsFragment strings -->
    <string name="firstStepName">Пример постановки задачи</string>
    <string name="secondStepName">Выявление ЗС, первичное ранжирование</string>
    <string name="thirdStepName">Определение ключевых ЗС</string>
    <string name="fourthStepName">Выделение и ранжирование потребностей ЗС</string>
    <string name="fifthStepName">Оценка ключевых показателей</string>
    <string name="sixthStepName">Расчет локальной и глобальной ценности</string>

    <!-- AKDSSOverViewFragment strings -->
    <string name="overviewText">
        <![CDATA[
        <b>Основная задача</b> – выбрать решение, которое позволит в максимальной мере <b>обеспечить баланс интересов заинтересованных сторон (ЗС)</b>, либо, если не удается найти баланс, понять из-за какая-то ЗС не удовлетворена. Возможно, ЗС желает инженерно-технологически достижимого решения, но абсолютно абсурдного. А может быть и наоборот, требования ЗС адекватны, но технологически недостижимы.
        <br/><br/>
        <b>Баланс интересов</b> – такое состояние, когда <b>интегральная степень удовлетворенности</b> всех ключевых ЗС решением достаточно высока. Достаточно высока – значит, что решение близко по своим возможностям к желаниям ЗС.
        <br/><br/>
        <i>Известно, что в на сегодняшний день одно из самых главных ограничений – скорость интернета.</i>
        <br/><br/>
        В верхней части экрана представлена схема алгоритма выполнения операций при переходе от появления необходимости в оценке системного решения до получения глобальной оценки. Выполненные шаги будут отмечаться зеленым цветом, текущий шаг – желтым, оставшиеся – белым.
        ]]>
    </string>

    <string name="exerciseText">
        <![CDATA[
        Коммерческая компания (далее Компания) идентифицировала высокую потребность абонентов в развитии услуг сотовой связи в определенном регионе. Компания рассматривает возможность создания в этом регионе собственной системы сотовой телефонной связи (СТС). Коммерческая компания (далее Компания) идентифицировала высокую потребность абонентов в развитии услуг сотовой связи в определенном регионе. Компания рассматривает возможность создания в этом регионе собственной системы сотовой телефонной связи (СТС).
        ]]>
    </string>

    <!-- AKDSSStakeholdersFragment strings -->

    <string name="stakeholdersDescriptionText">
        <![CDATA[
        ЗС это лицо или организация, имеющие права, долю, требования или интересы к системе или к использованию её свойств, отвечающих их потребностям и ожиданиям.
        <br/><br/>
        Рекомендуется при принятии решений по ранжированию ЗС в равной степени учитывать два аспекта, характеризующих ЗС, а именно: степень влияния ЗС на целевую систему и степень зависимости ЗС от целевой системы.
        <br/><br/>
        Исходя из постановки задачи, мы выделили несколько ЗС. Вы можете дополнить список из <b>набора типовых ЗС</b>.
        ]]>
    </string>

    <string name="addStakeholder">Добавить ЗС</string>
    <string name="stakeholderList">Набор типовых ЗС</string>

    <string name="listviewStakeholdersTitleHeader">ЗС</string>
    <string name="listviewStakeholdersInfluenceHeader">Влияние</string>
    <string name="listviewStakeholdersDependenceHeader">Зависимость</string>
    <string name="listviewStakeholdersImportanceHeader">Важность</string>
    <string name="listviewStakeholdersWeightHeader">Вес ЗС</string>

    <string name="decimalTextPlaceholder">0.67</string>

    <string name="stakeholdersMapDescriptionText">
        Ниже формируется карта заинтересованных сторон. Она дает наглядное представление важности ЗС самой по себе, а также по сравнению с другими.
        \n\n
        Попробуйте на основании карты сделать выводы о том, какие ЗС не являются ключевыми. На следующем этапе нужно будет заново составить список и включить в него только ключевые ЗС.
    </string>

    <!-- AKDSSStakeholdersPickerActivity -->

    <string-array name="typicalStakeholders">
        <item>Абоненты</item>
        <item>Акционеры</item>
        <item>Держатели собственности</item>
        <item>Корпоративные менеджеры</item>
    </string-array>

    <string name="stakeholder">Заинтересованная сторона</string>
    <string name="ok">OK</string>

    <!-- AKDSSKeyStakeholders Fragment -->
    <string name="keyStakeholdersDescriptionText">
        Составьте заново список, который будет включать только ключевые ЗС. Если у Вас возникают трудности, пролистайте вниз и снова изучите карту ЗС.
        \n\n
        Когда Вы закончите со списком ключевых ЗС, необходимо будет провести повторное ранжирование. Для этого воспользуемся Методом анализа иерархий. Нажмите кнопку «Проранжировать».
    </string>

    <string name="stakeholderListFromUser">Добавить ключевую ЗС</string>
    <string name="makeRangeStakeholders">Проранжировать ключевые ЗС</string>
    <string name="keyStakeholdersRangeFinished">Ранжирование завершено! Настало время выяснить чего же хотят наши ключевые ЗС и сможет ли наше решение их удовлетворить.</string>

    <string name="keyStakeholder">Ключевая ЗС</string>

    <!-- Analytic Hierarchy Process -->
    <string name="pairwiseComparison">Попарное сравнение альтернатив</string>
    <string name="ready">Готово</string>
    <string name="sampleText">Пример текста</string>

    <!-- AKDSSNeedsIndentifying Fragment -->

    <string name="needsIndentifyingFirstText">
        При выявлении потребностей ЗС следует исходить из того, что для гармоничного удовлетворения этих потребностей целевая система должна обладать определенными техническими, эксплуатационными и экономическими характеристиками.
        \n\n
        Примерная иерархия показателей, на основе оценки которых можно оценить пригодность целевой системы для ЗС для удовлетворения потребностей ЗС, показана на рисунке.
    </string>

    <string name="needsIndentifyingSecondText">
        Для оценки значимости конкретных параметров для конкретных ЗС рекомендуется использовать анкетирование, однако в качестве примера мы обойдемся экспертными оценками.
        \n\n
        Мы выбрали несколько показателей, которые считаем важными для ключевых ЗС. Продолжите список, выбрав для каждой ЗС хотя бы одну потребность.
        \n\n
        Постарайтесь для выявленных потребностей определить некоторый измеримый ключевой показатель.
    </string>
    <string name="need">Потребность</string>
    <string name="keyParameter">Ключевой показатель</string>
    <string name="parameter">Показатель</string>
    <string name="unit">Ед. изм.</string>
    <string name="weight">Вес</string>
    <string name="needImportance_1_10">Важность (1-10)</string>
    <string name="importanceRange">1-10</string>
    <string name="addNeedForStakeholder">Добавить потребность</string>

    <!-- AKDSSNormalizeParameters Fragment -->
    <string name="normalizeParametersHelpText">
        Теперь мы знаем значимость ЗС и значимость потребностей ЗС. Но осталось самое главное – понять в количественном выражении чего ключевые ЗС ждут от системы. Для этого используем метод линейной интерполяции. Для получения количественной оценки нам нужно знать три базовых значения:
        1. <b><font color="red">Худшее</font></b> ожидание значения показателя для ЗС, значения ниже которого являются абсолютно неприемлемыми.
        2. <b><font color="green">Лучшее</font></b> возможное значение показателя в ожиданиях ЗС.
        3. <b><font color="blue">Наиболее ожидаемое</font></b> значение показателя.
        <br /><br />
        Далее будет необходимо указать эти три значения для каждой ЗС по каждому из ранее выделенных для нее ключевого показателя.
    </string>
    <string name="bad_values_string">Значение, ниже которого варианты не рассматриваются вообще</string>
    <string name="expected_value">Значение, которое заинтересованная сторона ожидает от создаваемой системы</string>
    <string name="max_value">Максимальное технологически достижимое значение</string>
    <string name="resultAboutString">Введите значения ключевых показателей предполагаемого решения. В результате будут получены локальные ценности и глобальная ценность системы. Подробную таблицу расчетов можно просмотреть нажав на кнопку <b>«Подробнее»</b>.</string>
    <string name="localValue">Локальная ценность</string>
    <string name="globalValue">Глобальная ценность</string>
    <string name="results_finished_string">Теперь можете поэкспериментировать! Попробуйте изменять характеристики решения и наблюдайте за тем, как меняется глобальная ценность системы.</string>
    <string name="more">Подробности расчета</string>

    <string name="globalValueGood">Интегральная ценность системы говорит о достижении <b>баланса интересов</b>.</string>
    <string name="globalValueBad">Интегральная ценность системы говорит о том, что <b>баланс интересов</b> недостигнут, возможно стоит попробовать улучшить параметры системы.</string>

    <!-- AKDSSResultsFragment -->


</resources>
