<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/listviewStakeholdersTitleHeader"
        android:gravity="center"
        android:id="@+id/stakeholderTitleTextView" />

    <TextView
        android:layout_width="@dimen/fragment_akdssstakeholders_table_header_blocks_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/listviewStakeholdersInfluenceHeader"
        android:id="@+id/stakeholderInfluenceHeaderTextView" />

    <TextView
        android:layout_width="@dimen/fragment_akdssstakeholders_table_header_blocks_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/listviewStakeholdersDependenceHeader"
        android:id="@+id/stakeholderDependenceHeaderTextView" />

    <TextView
        android:layout_width="@dimen/fragment_akdssstakeholders_table_header_blocks_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/listviewStakeholdersImportanceHeader"
        android:id="@+id/stakeholderImportanceHeaderTextView" />

    <TextView
        android:layout_width="@dimen/fragment_akdssstakeholders_table_header_blocks_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/listviewStakeholdersWeightHeader"
        android:id="@+id/stakeholderWeightHeaderTextView" />

</LinearLayout>