<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sampleText"
        android:id="@+id/needTitleTextView" />

    <com.toyoapps.dssforstudents.helpers.TWEditText
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/parameter"
        android:id="@+id/needParameterEditText" />

    <com.toyoapps.dssforstudents.helpers.TWEditText
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/unit"
        android:id="@+id/needParameterUnitEditText" />

    <com.toyoapps.dssforstudents.helpers.TWEditText
        android:layout_width="@dimen/fragment_akdssstakeholders_table_blocks_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/needImportanceTextView" />

    <TextView
        android:layout_width="@dimen/fragment_akdssstakeholders_table_blocks_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/decimalTextPlaceholder"
        android:id="@+id/needWeightTextView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="X"
        android:id="@+id/needDeleteButton" />
</LinearLayout>