<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.AKDSSOverviewFragment">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/overviewTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overviewText" />


            <TextView
                android:id="@+id/exerciseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/overviewTextView"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/firstStepName"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/exerciseTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/exerciseTitle"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/exerciseText" />

            <Button
                android:id="@+id/overviewNextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/exerciseTextView"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:onClick="nextStepClicked"
                android:text="@string/next" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>