<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    tools:context="layout.AKDSSStakeholdersFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/questImage"
                    android:layout_width="@dimen/fragment_akdssstakeholders_quest_side_size"
                    android:layout_height="@dimen/fragment_akdssstakeholders_quest_side_size"
                    android:contentDescription="@string/stakeholder"
                    android:src="@drawable/quest" />

                <TextView
                    android:id="@+id/keyStakeholdersDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@+id/questImage"
                    android:layout_toRightOf="@+id/questImage"
                    android:text="@string/keyStakeholdersDescriptionText" />

            </RelativeLayout>

            <Button
                android:id="@+id/findedStakeholdersButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:onClick="showStakeholdersPicker"
                android:text="@string/stakeholderListFromUser" />

            <com.toyoapps.dssforstudents.helpers.AKDSSScrollDisabledListView
                android:id="@+id/keyStakeholdersListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:headerDividersEnabled="false" />

            <Button
                android:id="@+id/makeRangeKeyStakeholdersButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:onClick="runPairwiseComparisonForKeyStakeholders"
                android:text="@string/makeRangeStakeholders" />

            <TextView
                android:id="@+id/keyStakeholdersRangeFinishedTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/keyStakeholdersRangeFinished"
                android:visibility="gone"/>

            <Button
                android:id="@+id/keyStakeholdersNextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:onClick="nextStepClicked"
                android:text="@string/next"
                android:visibility="gone"/>


            <com.androidplot.xy.XYPlot
                style="@style/APDefacto.Light"
                android:id="@+id/stakeholdersMap"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_height="300dp"
                ap:label="Карта заинтересованных сторон"
                ap:rangeLabel="Степень влияния ЗС на систему"
                ap:domainLabel="Степень зависимости ЗС от системы"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>