<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.toyoapps.dssforstudents.fragments.AKDSSResultsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultAboutString" />

            <TableLayout
                android:id="@+id/resultsSlidersTableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:stretchColumns="0,1"/>

            <TableLayout
                android:id="@+id/resultsTableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:stretchColumns="0,1,2,3">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/off_white"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    tools:ignore="UselessParent">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/stakeholder"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/localValue"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/listviewStakeholdersWeightHeader"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/globalValue"/>

                </TableRow>
            </TableLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="showCalculationDetails"
                android:text="@string/more"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:weightSum="2">

                <com.github.mikephil.charting.charts.RadarChart
                    android:id="@+id/resultRadarChart"
                    android:layout_width="0dp"
                    android:layout_height="500dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/globalValue"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/resultImage"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/okvalue"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:id="@+id/resultScoreTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="35sp"
                            android:text="1,00"
                            tools:ignore="HardcodedText" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/resultDescriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:text="@string/sampleText"
                        android:background="@color/off_white"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/activity_vertical_margin"
                android:text="@string/results_finished_string"
                android:background="@drawable/border_shape" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
