<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ap="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AKDSSStakeholdersFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/questImage"
                    android:layout_width="@dimen/fragment_akdssstakeholders_quest_side_size"
                    android:layout_height="@dimen/fragment_akdssstakeholders_quest_side_size"
                    android:contentDescription="@string/stakeholder"
                    android:src="@drawable/quest" />

                <TextView
                    android:id="@+id/stakeholdersInitialDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@+id/questImage"
                    android:layout_toRightOf="@+id/questImage"
                    android:text="@string/stakeholdersDescriptionText" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <Button
                    android:id="@+id/stakeholdersListButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:onClick="typicalStakeholdersListClicked"
                    android:text="@string/stakeholderList" />

                <Button
                    android:id="@+id/addStakeholderButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:onClick="addStakeholderClicked"
                    android:text="@string/addStakeholder" />
            </LinearLayout>

            <com.toyoapps.dssforstudents.helpers.AKDSSScrollDisabledListView
                android:id="@+id/stakeholdersListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:headerDividersEnabled="false" />

            <TextView
                android:id="@+id/stakeholdersMapDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/stakeholdersMapDescriptionText" />

            <com.androidplot.xy.XYPlot
                style="@style/APDefacto.Light"
                android:id="@+id/stakeholdersMap"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_height="300dp"
                ap:label="Карта заинтересованных сторон"
                ap:rangeLabel="Степень влияния ЗС на систему"
                ap:domainLabel="Степень зависимости ЗС от системы"/>

            <Button
                android:id="@+id/stakeholdersNextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:onClick="nextStepClicked"
                android:text="@string/next" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>